增加了DSL的功能,增加了BFS,DFS的动画过程,增加了图的缩小放大功能